test/good/functions/func11.px

func f() def
    print 'f'
    return

func g() def
    print 'g'
    return f()

g()
