test/bad/functions/return02.px

func f(): String def
    return

f()
